# mmccrechowicz.github.io

./: .gitignore  README.md  config.toml  index.html  pyproject.toml
content/: about.md
content/posts/: CO2_Emissions.ipynb  CO2_Emissions.md  UK_REF_2014.ipynb  UK_REF_2014.md  University_Donations.ipynb  University_Donations.md  Volcanos.ipynb  Volcanos.md  convert.py  my-first-post.md  my-second-post.md  tableau_alumni  tableau_alumni.md  tableau_netflix.md  tableau_university_donations.md  tableau_wimbledon.md
notebooks/: convert.py
public/: 404.html  index.html  index.xml  sitemap.xml
public/about/: index.html
public/categories/: index.html  index.xml
public/css/: zozo.css
public/page/1/: index.html
public/page/2/: index.html
public/posts/: CO2_Emissions.ipynb  UK_REF_2014.ipynb  University_Donations.ipynb  convert.py  index.html  index.xml
public/posts/co2_emissions/: index.html
public/posts/tableau_alumni/: index.html
public/posts/tableau_netflix/: index.html
public/posts/tableau_university_donations/: index.html
public/posts/tableau_wimbledon/: index.html
public/posts/uk_ref_2014/: index.html
public/posts/university_donations/: index.html
public/posts/volcanos/: index.html
public/tags/: index.html  index.xml
public/tags/jupyter/: index.html  index.xml
public/tags/sql/: index.html  index.xml
public/tags/tableau/: index.html  index.xml
themes/zozo/layouts/: index.html
themes/zozo/layouts/_default/: list.html  single.html
themes/zozo/layouts/partials/: header.html  post.html
themes/zozo/static/css/: zozo.css
