[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Matthew"]

[tool.poetry.dependencies]
python = ">=3.7.1<4.0"
jupyter = "1.0.0"
#pysqlite3-binary = "0.4.6"
pandas = "1.2.3"
seaborn = "0.11.1"
openpyxl = "*"
xlrd = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
convert = "notebooks.convert:convert"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
